src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__op_payload_json_delete_attachment.snap
---
source: src/op.rs
expression: json
---
attachment_id: A1
filename: photo.png
fs_path: /tmp/photo.png
op_type: delete_attachment
