src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__op_payload_json_purge_block.snap
---
source: src/op.rs
expression: json
---
block_id: 01ARZ3NDEKTSV4RRFFQ69G5FAV
op_type: purge_block
