src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__op_payload_json_rename_attachment.snap
---
source: src/op.rs
assertion_line: 1240
expression: json
---
attachment_id: A1
new_filename: new.png
old_filename: old.png
op_type: rename_attachment
