src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__op_payload_json_restore_block.snap
---
source: src/op.rs
expression: json
---
block_id: 01ARZ3NDEKTSV4RRFFQ69G5FAV
deleted_at_ref: 1735689600000
op_type: restore_block
