src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__op_payload_json_set_property.snap
---
source: src/op.rs
expression: json
---
block_id: 01ARZ3NDEKTSV4RRFFQ69G5FAV
key: priority
op_type: set_property
value_bool: ~
value_date: ~
value_num: ~
value_ref: ~
value_text: high
