src-tauri/agaric-store/src/snapshots/agaric_store__op__tests__set_property_payload_value_bool_true.snap
---
source: src/op.rs
assertion_line: 1261
expression: json
---
block_id: 01ARZ3NDEKTSV4RRFFQ69G5FAV
key: flag
value_bool: true
value_date: ~
value_num: ~
value_ref: ~
value_text: ~
